# pipeline_lineage_kiro

./: .gitignore  INTERFACES.md  README.md  demo.py  pyproject.toml  run_notebook_test.py
.hypothesis/constants/: 1258afd1ee91b900  717b265c11e04a18  7ae45c9c64cdf710  955633cfd58a3aec
.hypothesis/examples/04e6b3400353b141/: 2f919828b595eb77  92638a423a56b27e  dac335fc412da9e7
.hypothesis/examples/2f919828b595eb77/: 4e04983aa1043284
.hypothesis/examples/92638a423a56b27e/: 6208ef2092a84210
.hypothesis/examples/dac335fc412da9e7/: 47c2b255faa6c55b  df7a32075910d53a
.hypothesis/tmp/: tmp3gnk1hu_  tmpr400b4ha
.kiro/hooks/: log-tool-locations.kiro.hook
.kiro/specs/demo-notebook/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/file-pipeline-lineage/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
demo/: __init__.py  demo_notebook.ipynb  pipeline.py
demo/tests/: test_demo_connections.py  test_demo_properties.py
kiro_logs/: Generate Steering Rules.md  hook for shell tools.md  spec 1 file based and run replay.md  spec 2 user created connectors.md  spec 3 demo notebook.md  vibe add write timestamps.md
src/file_pipeline_lineage/: __init__.py  connections.py  context.py  contract.py  descriptors.py  exceptions.py  record.py  replayer.py  store.py  tracker.py
tests/: conftest.py  test_connections.py  test_context.py  test_context_properties.py  test_demo.py  test_integration.py  test_lineage_record.py  test_lineage_store.py  test_replayer.py  test_tracker.py  test_write_result.py
(+4 files in other folders)
