[project]
name = "file-pipeline-lineage"
version = "0.1.0"
description = "Lineage capture for file-based data pipeline runs"
requires-python = ">=3.11"
dependencies = [
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/file_pipeline_lineage"]

[tool.pytest.ini_options]
testpaths = ["tests", "demo/tests"]
